edit button alignment fixed

--- a/ExpensesApp/apps/ExpensesApp/common/jqueryMobile/themeroller.css
+++ b/ExpensesApp/apps/ExpensesApp/common/jqueryMobile/themeroller.css
@@ -1076,9 +1076,7 @@ a.ui-link-inherit {
 	background-position:   -788px -1px;
 }
 .ui-icon-edit {
-	background-position:   -780px -1px;
-	
-	/*-824px -1px;*/
+	background-position:   -824px -1px;
 }
 /* HD/"retina" sprite
 -----------------------------------------------------------------------------------------------------------*/
